Done code changes for review comments refs Task #40276

--- a/app.json
+++ b/app.json
@@ -46,8 +46,7 @@
      */
     "requires": [
         "sencha-charts",
-        "font-awesome",
-        "ext-ux",
+        "ext-ux"
     ],
 
     /**
